@@ -11,6 +11,8 @@
  
  * mldivide, mrdivide, inv: Improved performance for simple cases
  
+ * infsup, infsupdec: Enabled broadcasting of scalar boundaries
+ 
 0.1.3 2015-02-24
 ================
 
